login completado, menu vertical hecho falta situarlo bien

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <app-navbar></app-navbar>
 
-<div class="container my-3 contenedor-main">
+<div class="container my-3 w-100 contenedor-main">
 
     <router-outlet></router-outlet>
     <!--<app-login></app-login>-->
