--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,3 +1,6 @@
-<p>
-  home works!
-</p>
+
+<div class="menu">
+  <app-menu-vertical></app-menu-vertical>
+</div>
+
+<img src="../../../assets/marca.jpg" alt="imagen geckop">
