--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -28,7 +28,7 @@
 
             <a href="#">Forgot password?</a>
             <br>
-            <a href="#">Don´t have an account?</a>
+            <a routerLink="/registro">Don´t have an account?</a>
         </form>
     </div>
 </body>
