--- a/src/app/components/vistaProyectos/proyectos.component.html
+++ b/src/app/components/vistaProyectos/proyectos.component.html
@@ -1,6 +1,6 @@
 <div class="card-body text-secondary">
+  <app-menu-vertical></app-menu-vertical>
     <h4 class="card-title">Tus Proyectos</h4>
-
     <div class="my-3">
       <button class="btn btn-rounded btn btn-success" types="button" [routerLink] = "['/proyectos/form-proyectos.component']">Nuevo Proyecto</button>
     </div>
