duplicados en proyecto y acreedores

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <app-navbar></app-navbar>
 
+<app-menu-vertical></app-menu-vertical>
 <div class="container my-3 w-100 contenedor-main">
 
     <router-outlet></router-outlet>
