--- a/src/app/components/menu-vertical/menu-vertical.component.html
+++ b/src/app/components/menu-vertical/menu-vertical.component.html
@@ -1,8 +1,8 @@
 <div class="menu-ver">
   <div class="card float-left bg-dark mb-3 cont-menu-vertical" style="max-width: 18rem; text-align:center;">
-    <div class="card-header text-white">
+  <!--  <div class="card-header text-white">
       Opciones
-    </div>
+    </div>-->
     <ul class="list-group">
       <li class="list-group-item raton-menu" routerLink="/acreedores">Acreedores</li>
       <li class="list-group-item raton-menu" routerLink="/ordenes">Órdenes</li>
