--- a/src/app/components/menu-vertical/menu-vertical.component.css
+++ b/src/app/components/menu-vertical/menu-vertical.component.css
@@ -1,6 +1,15 @@
 .menu-ver {
   float:left;
   margin-right: 50px;
+  height: 100%;
+}
+
+.cont-menu-vertical{
+  border-radius: 0px;
+}
+
+.list-group-item{
+  border-radius: 0px;
 }
 
 .color-menu {
@@ -10,6 +19,25 @@
 .raton-menu:hover {
   background-color: rgba(1,90,8);
   color: #fff;
-  cursor: pointer;
   transition-duration: 0.5s
+}
+.raton-menu:active {
+  background-color: rgba(1,90,8);
+  color: #fff;
+}
+.card>.list-group:first-child .list-group-item:first-child {
+  border-top-right-radius: 0rem;
+}
+
+.card>.list-group:last-child .list-group-item:last-child {
+    border-bottom-right-radius: 0rem;
+    border-bottom-left-radius: 0rem;
+}
+.card{
+  border-top: 0px;
+}
+
+button{
+  outline-color: white;
+  outline: none;
 }
