menu vertical hecho

--- a/src/app/components/menu-vertical/menu-vertical.component.css
+++ b/src/app/components/menu-vertical/menu-vertical.component.css
@@ -19,7 +19,8 @@
 .raton-menu:hover {
   background-color: rgba(1,90,8);
   color: #fff;
-  transition-duration: 0.5s
+  transition-duration: 0.5s;
+  cursor: pointer;
 }
 .raton-menu:active {
   background-color: rgba(1,90,8);
