--- a/src/app/components/menu-vertical/menu-vertical.component.html
+++ b/src/app/components/menu-vertical/menu-vertical.component.html
@@ -3,7 +3,7 @@
   <!--  <div class="card-header text-white">
       Opciones
     </div>-->
-    <ul class="list-group">
+    <ul class="list-group" *ngIf="isLog">
       <li class="list-group-item raton-menu" routerLink="/acreedores">Acreedores</li>
       <li class="list-group-item raton-menu" routerLink="/ordenes">Órdenes</li>
       <li class="list-group-item raton-menu" routerLink="/proyectos">Proyectos</li>
