--- a/src/app/components/navbar/navbar.component.css
+++ b/src/app/components/navbar/navbar.component.css
@@ -10,3 +10,12 @@
 .loginreg .navbar-text {
   float: right;
 }
+
+.titulo-home {
+  margin-left: 8px;
+}
+
+.titulo-home:hover {
+  font-size: 24px;
+  cursor: pointer;
+}
