modificado perfil falta terminarlo

--- a/src/app/components/navbar/navbar.component.css
+++ b/src/app/components/navbar/navbar.component.css
@@ -19,3 +19,8 @@
   font-size: 24px;
   cursor: pointer;
 }
+
+.loginreg .navbar-text .iconPerfil {
+  padding-top: -200px;
+  margin-right: 10px;
+}
