--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -16,15 +16,15 @@
             <!--Email-->
             <div class="cont-email">
                 <img src="assets/iconos/user.png" alt="icono usuario">
-                <input type="text" placeholder="DNI" name="dni" [(ngModel)]="usuario.dni">
+                <input type="text" class="input" placeholder="DNI" name="dni" [(ngModel)]="usuario.dni">
             </div>
 
             <!--Password-->
             <div class="cont-password">
                 <img src="assets/iconos/lock.png" alt="icono usuario">
-                <input type="password" placeholder="Password" name="password" [(ngModel)]="usuario.password">
+                <input type="password" class="input" placeholder="Password" name="password" [(ngModel)]="usuario.password">
             </div>
-            <input type="submit" value="Log in">
+            <input type="submit" class="input" value="Log in">
 
             <a href="#">Forgot password?</a>
             <br>
