--- a/src/app/components/vistaAcreedores/formAcreedores/form-acreedores.component.html
+++ b/src/app/components/vistaAcreedores/formAcreedores/form-acreedores.component.html
@@ -19,7 +19,13 @@
       </div>
       <div class="form-group col-md-6">
         <label for="nif">   NIF</label>
-        <input type="text" class="form-control" [(ngModel)]="acreedor.nif" id="nif" placeholder="NIF" name="nif">
+        <input type="text" class="form-control" [(ngModel)]="acreedor.nif" id="nif" placeholder="NIF" name="nif" pattern="(([X-Z]{1})([-]?)(\d{7})([-]?)([A-Z]{1}))|((\d{8})([-]?)([A-Z]{1}))">
+        <div class="alert alert-danger" *ngIf="formAcreedores.get('nif').errors && formAcreedores.get('nif').dirty">
+          <p *ngIf="formAcreedores.get('nif').hasError('required')">DNI no puede estar vacio</p>
+          <p *ngIf="formAcreedores.get('nif').hasError('minlength')">Mínimo de 9 caracteres</p>
+          <p *ngIf="formAcreedores.get('nif').hasError('maxlength')">Máximo de 10 caracteres</p>
+          <p *ngIf="formAcreedores.get('nif').errors?.pattern">Formato erróneo</p>
+        </div>
       </div>
     </div>
 
@@ -27,6 +33,11 @@
       <div class="form-group col-md-6">
         <label for="iban">IBAN</label>
         <input type="text" class="form-control" [(ngModel)]="acreedor.iban" id="iban" placeholder="IBAN" name="iban">
+        <div class="alert alert-danger" *ngIf="formAcreedores.get('iban').errors && formAcreedores.get('iban').dirty">
+          <p *ngIf="formAcreedores.get('iban').hasError('required')">Nombre no puede estar vacio</p>
+          <p *ngIf="formAcreedores.get('iban').hasError('maxlength')">Debe tener 20 caracteres</p>
+          <p *ngIf="formAcreedores.get('iban').hasError('minlength')">Debe tener 20 caracteres</p>
+        </div>
       </div>
     </div>
 
