--- a/src/app/components/vistaProyectos/formProyectos/form-proyectos.component.css
+++ b/src/app/components/vistaProyectos/formProyectos/form-proyectos.component.css
@@ -1,3 +1,25 @@
 .btn-danger{
   margin-left: 10px;
 }
+.form-control:focus{
+  border-color: #228B22;
+  border-width: 2px;
+  box-shadow: none;
+}
+
+
+.custom-select:focus{
+  border-color: #228B22;
+  border-width: 2px;
+  box-shadow: none;
+  outline: none;
+}
+
+.custom-select option{
+    background-color: #ffffff;
+
+}
+
+select:hover{
+  outline: none;
+}
