--- a/src/app/components/vistaAcreedores/acreedores.component.html
+++ b/src/app/components/vistaAcreedores/acreedores.component.html
@@ -6,7 +6,7 @@
       <button class="btn btn-rounded btn btn-success" types="button" [routerLink] = "['/acreedores/form-acreedores.component']">Nuevo Acreedor</button>
     </div>
 
-    <table class="table table-bordered table-striped text-center" *ngIf="acreedores!=NULL">
+    <table class="table table-bordered table-striped text-center">
       <thead class="thead-dark">
         <tr>
           <th>Nombre</th>
@@ -35,8 +35,4 @@
         </tr>
       </tbody>
     </table>
-
-    <div *ngIf="acreedores?.lenght==0" class="alert alert-info">
-      No hay acreedores en la base de datos.
-    </div>
   </div>
