vista formproyectos y archivo config con la ruta del backend añadido

--- a/src/app/components/vistaProyectos/formProyectos/form-proyectos.component.html
+++ b/src/app/components/vistaProyectos/formProyectos/form-proyectos.component.html
@@ -70,7 +70,7 @@
       </div>
       <div class="form-group col-md-1 mb-3">
         <br>
-        <button type="button" class="btn btn-link" name="button"  (click)="quitarIP2()"!--[hidden]="proyecto.ip2==null">
+        <button type="button" class="btn btn-link" name="button"  (click)="quitarIP2()"[hidden]="proyecto.ip2==null">
               <img src="assets/iconos/menos.png" class="rounded" alt="Quitar IP2">
         </button>
       </div>
