--- a/src/app/components/form-registro-usuarios/form-registro-usuarios.component.html
+++ b/src/app/components/form-registro-usuarios/form-registro-usuarios.component.html
@@ -11,55 +11,44 @@
 
             <h2>Registro</h2>
            
-            <input id="placeColor" formControlName="dni" type="text" placeholder="DNI" pattern="(([X-Z]{1})([-]?)(\d{7})([-]?)([A-Z]{1}))|((\d{8})([-]?)([A-Z]{1}))">
+            <input id="placeColor" formControlName="dni" type="text" placeholder="DNI" pattern="(([X-Z]{1})([-]?)(\d{7})([-]?)([A-Z]{1}))|((\d{8})([-]?)([A-Z]{1}))" maxlength="10">
             <div class="alerta">
               <small *ngIf="!formValid && formRegistro.get('dni').hasError('required')"> DNI no puede estar vacio <br></small>
-              <small *ngIf="!formValid && formRegistro.get('dni').hasError('minlength')"> Mínimo de 9 caractere<br></small>
-              <small *ngIf="!formValid && formRegistro.get('dni').hasError('maxlength')">Máximo de 10 caracteres<br></small>
               <small *ngIf="!formValid && formRegistro.get('dni').errors?.pattern">Formato erróneo</small>
             </div>
-            <!--<div class="alert alert-danger" *ngIf="formRegistro.get('dni').errors && formRegistro.get('dni').dirty">  
-              <small *ngIf="formRegistro.get('dni').hasError('required')">DNI no puede estar vacio</small>
-              <p *ngIf="formRegistro.get('dni').hasError('minlength')">Mínimo de 9 caracteres</p>
-              <p *ngIf="formRegistro.get('dni').hasError('maxlength')">Máximo de 10 caracteres</p>
-              <p *ngIf="formRegistro.get('dni').errors?.pattern">Formato erróneo</p>
-            </div>-->
 
-            <input id="placeColor" formControlName="nombre" type="text" placeholder="Nombre">
-            <div class="alert alert-danger" *ngIf="formRegistro.get('nombre').errors && formRegistro.get('nombre').dirty">
-              <p *ngIf="formRegistro.get('nombre').hasError('required')">Nombre no puede estar vacio</p>
-              <p *ngIf="formRegistro.get('nombre').hasError('maxlength')">Máximo de 20 caracteres</p>
+
+            <input id="placeColor" formControlName="nombre" type="text" placeholder="Nombre" maxlength="20">
+            <div class="alerta">
+              <small *ngIf="!formValid && formRegistro.get('nombre').hasError('required')">Nombre no puede estar vacio<br></small>
+            </div>
+           
+
+            <input id="placeColor" formControlName="apellido1" type="text" placeholder="Primer apellido" maxlength="20">
+            <div class="alerta">
+              <small *ngIf="!formValid && formRegistro.get('apellido1').hasError('required')">Primer apellido no puede estar vacio<br></small>
             </div>
 
-            <input id="placeColor" formControlName="apellido1" type="text" placeholder="Primer apellido">
-            <div class="alert alert-danger" *ngIf="formRegistro.get('apellido1').errors && formRegistro.get('apellido1').dirty">
-              <p *ngIf="formRegistro.get('apellido1').hasError('required')">Primer apellido no puede estar vacio</p>
-              <p *ngIf="formRegistro.get('apellido1').hasError('maxlength')">Máximo de 20 caracteres</p>
+            <input id="placeColor" formControlName="apellido2" type="text" placeholder="Segundo apellido" maxlength="20">
+            <div class="alerta">
+              <small *ngIf="!formValid && formRegistro.get('apellido2').hasError('required')">Segundo apellido no puede estar vacio<br></small>
             </div>
 
-            <input id="placeColor" formControlName="apellido2" type="text" placeholder="Segundo apellido">
-            <div class="alert alert-danger" *ngIf="formRegistro.get('apellido2').errors && formRegistro.get('apellido2').dirty">
-              <p *ngIf="formRegistro.get('apellido2').hasError('required')">Segundo apellido no puede estar vacio</p>
-              <p *ngIf="formRegistro.get('apellido2').hasError('maxlength')">Máximo de 20 caracteres</p>
+            <input id="placeColor" type="email" placeholder="Correo Electrónico" formControlName="email" maxlength="50">
+            <div class="alerta">
+              <small *ngIf="!formValid && formRegistro.get('email').hasError('required')">Email no puede estar vacio<br></small>
+              <small *ngIf="!formValid && formRegistro.get('email').hasError('email')">Formato erroneo<br></small>
             </div>
 
-            <input id="placeColor" type="email" placeholder="email electrónico" formControlName="email">
-            <div class="alert alert-danger" *ngIf="formRegistro.get('email').errors && formRegistro.get('email').dirty">
-              <p *ngIf="formRegistro.get('email').hasError('required')">Email no puede estar vacio</p>
-              <p *ngIf="formRegistro.get('email').hasError('email')">Formato erróneo</p>
-            </div>
-
-            <input id="placeColor" type="password" placeholder="Contraseña" formControlName="password">
-            <div class="alert alert-danger" *ngIf="formRegistro.get('password').errors && formRegistro.get('password').dirty">
-              <p *ngIf="formRegistro.get('password').hasError('required')">Email no puede estar vacio</p>
-              <p *ngIf="formRegistro.get('password').hasError('minlength')">Mínimo de 5 caracteres</p>
-              <p *ngIf="formRegistro.get('password').hasError('maxlength')">Máximo de 10 caracteres</p>
+            <input id="placeColor" type="password" placeholder="Contraseña" formControlName="password" maxlength="10">
+            <div class="alerta">
+              <small *ngIf="!formValid && formRegistro.get('password').hasError('required')">Contraseña no puede estar vacio<br></small>
+              <small *ngIf="!formValid && formRegistro.get('password').hasError('minlength')">Mínimo de 5 caracteress<br></small>
             </div>
 
             <div id="checkTerm">
               <label for="checkTerminos">
                   <input type="checkbox" id="checkTerminos" value="checkTerminos" name="checkTerminos"> Al registrarse, aceptas nuestras <a href="#">Condiciones de uso</a> y <a href="#">Política de privacidad.</a>
-
               </label>
             </div>
 
